--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,6 @@
         </div>
     </div>
 </nav>
-<router-outlet></router-outlet>
+<main class="container mt-3">
+    <router-outlet></router-outlet>
+</main>
