--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="favicon.ico" alt="Logo angular">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/alumnos']" routerLinkActive="active">Alumnos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/cursos']" routerLinkActive="active">Cursos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/examenes']" routerLinkActive="active">Exámenes</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<app-nav-bar></app-nav-bar>
 <main class="container mt-3">
     <router-outlet></router-outlet>
 </main>
