--- a/src/app/components/alumnos/alumnos.component.html
+++ b/src/app/components/alumnos/alumnos.component.html
@@ -1,1 +1,20 @@
 <h1 class="text-center">{{ titulo }}</h1>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+            <th>Creado en</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let alumno of alumnos">
+            <td>{{ alumno.id }}</td>
+            <td>{{ alumno.nombre }}</td>
+            <td>{{ alumno.apellido }}</td>
+            <td>{{ alumno.createAt }}</td>
+        </tr>
+    </tbody>
+</table>
