--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -3,6 +3,7 @@
         {{ titulo }}
     </div>
     <div class="card-body">
+        <button type="button" class="btn btn-primary" [routerLink]="['/alumnos', 'form']">Crear</button>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
