--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -12,6 +12,7 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Creado en</th>
+                    <th>Editar</th>
                 </tr>
             </thead>
             <tbody>
@@ -21,6 +22,12 @@
                     <td>{{ alumno.apellido }}</td>
                     <td>{{ alumno.email }}</td>
                     <td>{{ alumno.createAt | date:'dd/MM/yyyy' }}</td>
+                    <td>
+                        <button type="button" [routerLink]="['/alumnos', 'form', alumno.id]"
+                            class="btn btn-sm btn-warning">
+                            Editar
+                        </button>
+                    </td>
                 </tr>
             </tbody>
         </table>
