--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -13,6 +13,7 @@
                     <th>Email</th>
                     <th>Creado en</th>
                     <th>Editar</th>
+                    <th>Eliminar</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,6 +28,9 @@
                             class="btn btn-sm btn-warning">
                             Editar
                         </button>
+                    </td>
+                    <td>
+                        <button type="button" (click)="eliminar(alumno)" class="btn btn-sm btn-danger">Eliminar</button>
                     </td>
                 </tr>
             </tbody>
