--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -4,7 +4,8 @@
     </div>
     <div class="card-body">
         <button type="button" class="btn btn-primary" [routerLink]="['/alumnos', 'form']">Crear</button>
-        <table class="table table-striped table-hover">
+        <div *ngIf="alumnos.length == 0" class="alert alert-info mt-3">No hay alumnos en el sistema</div>
+        <table *ngIf="alumnos.length > 0" class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th>Id</th>
