--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -38,7 +38,7 @@
         </table>
 
         <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual"
-            [pageSizeOptions]="pageSizeOptions">
+            [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)">
         </mat-paginator>
     </div>
 </div>
