--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -5,44 +5,41 @@
     <div class="card-body">
         <button type="button" class="btn btn-primary" [routerLink]="['/alumnos', 'form']">Crear</button>
         <div *ngIf="alumnos.length == 0" class="alert alert-info mt-3">No hay alumnos en el sistema</div>
-        <ng-container *ngIf="alumnos.length > 0">
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Email</th>
-                        <th>Creado en</th>
-                        <th>Editar</th>
-                        <th>Eliminar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let alumno of alumnos">
-                        <td>{{ alumno.id }}</td>
-                        <td>{{ alumno.nombre }}</td>
-                        <td>{{ alumno.apellido }}</td>
-                        <td>{{ alumno.email }}</td>
-                        <td>{{ alumno.createAt | date:'dd/MM/yyyy' }}</td>
-                        <td>
-                            <button type="button" [routerLink]="['/alumnos', 'form', alumno.id]"
-                                class="btn btn-sm btn-warning">
-                                Editar
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" (click)="eliminar(alumno)"
-                                class="btn btn-sm btn-danger">Eliminar</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <table *ngIf="alumnos.length > 0" class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Email</th>
+                    <th>Creado en</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let alumno of alumnos">
+                    <td>{{ alumno.id }}</td>
+                    <td>{{ alumno.nombre }}</td>
+                    <td>{{ alumno.apellido }}</td>
+                    <td>{{ alumno.email }}</td>
+                    <td>{{ alumno.createAt | date:'dd/MM/yyyy' }}</td>
+                    <td>
+                        <button type="button" [routerLink]="['/alumnos', 'form', alumno.id]"
+                            class="btn btn-sm btn-warning">
+                            Editar
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" (click)="eliminar(alumno)" class="btn btn-sm btn-danger">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-            <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual"
-                [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" showFirstLastButtons
-                class="d-flex justify-content-start">
-            </mat-paginator>
-        </ng-container>
+        <mat-paginator [hidden]="alumnos.length == 0" [length]="totalRegistros" [pageSize]="totalPorPagina"
+            [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" showFirstLastButtons
+            class="d-flex justify-content-start">
+        </mat-paginator>
     </div>
 </div>
