--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="card-body">
         <button type="button" class="btn btn-primary" [routerLink]="['/alumnos', 'form']">Crear</button>
-        <div *ngIf="alumnos.length == 0" class="alert alert-info mt-3">No hay alumnos en el sistema</div>
-        <table *ngIf="alumnos.length > 0" class="table table-striped table-hover">
+        <div *ngIf="lista.length == 0" class="alert alert-info mt-3">No hay alumnos en el sistema</div>
+        <table *ngIf="lista.length > 0" class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -18,7 +18,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let alumno of alumnos">
+                <tr *ngFor="let alumno of lista">
                     <td>{{ alumno.id }}</td>
                     <td>{{ alumno.nombre }}</td>
                     <td>{{ alumno.apellido }}</td>
@@ -37,7 +37,7 @@
             </tbody>
         </table>
 
-        <mat-paginator [hidden]="alumnos.length == 0" [length]="totalRegistros" [pageSize]="totalPorPagina"
+        <mat-paginator [hidden]="lista.length == 0" [length]="totalRegistros" [pageSize]="totalPorPagina"
             [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" showFirstLastButtons
             class="d-flex justify-content-start">
         </mat-paginator>
