--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -9,6 +9,7 @@
             <thead>
                 <tr>
                     <th>Id</th>
+                    <th>Foto</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>Email</th>
@@ -20,6 +21,9 @@
             <tbody>
                 <tr *ngFor="let alumno of lista">
                     <td>{{ alumno.id }}</td>
+                    <td>
+                        <img [src]="alumno | imagen" alt="{{ alumno.nombre }}" class="img-small">
+                    </td>
                     <td>{{ alumno.nombre }}</td>
                     <td>{{ alumno.apellido }}</td>
                     <td>{{ alumno.email }}</td>
