--- a/src/app/components/cursos/list/cursos.component.html
+++ b/src/app/components/cursos/list/cursos.component.html
@@ -1,1 +1,29 @@
-<p>cursos works!</p>
+<div class="card">
+    <div class="card-header">
+        {{ titulo }}
+    </div>
+    <div class="card-body">
+        <div *ngIf="lista.length == 0" class="alert alert-info mt-3">No hay cursos en el sistema</div>
+        <table *ngIf="lista.length > 0" class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Creado en</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let curso of lista">
+                    <td>{{ curso.id }}</td>
+                    <td>{{ curso.nombre }}</td>
+                    <td>{{ curso.createAt | date:'dd/MM/yyyy' }}</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <mat-paginator [hidden]="lista.length == 0" [length]="totalRegistros" [pageSize]="totalPorPagina"
+            [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" showFirstLastButtons
+            class="d-flex justify-content-start">
+        </mat-paginator>
+    </div>
+</div>
