--- a/src/app/components/cursos/list/cursos.component.html
+++ b/src/app/components/cursos/list/cursos.component.html
@@ -3,6 +3,7 @@
         {{ titulo }}
     </div>
     <div class="card-body">
+        <button type="button" class="btn btn-primary" [routerLink]="['/cursos', 'form']">Crear</button>
         <div *ngIf="lista.length == 0" class="alert alert-info mt-3">No hay cursos en el sistema</div>
         <table *ngIf="lista.length > 0" class="table table-striped table-hover">
             <thead>
