--- a/src/app/components/cursos/list/cursos.component.html
+++ b/src/app/components/cursos/list/cursos.component.html
@@ -11,6 +11,8 @@
                     <th>Id</th>
                     <th>Nombre</th>
                     <th>Creado en</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
                 </tr>
             </thead>
             <tbody>
@@ -18,6 +20,15 @@
                     <td>{{ curso.id }}</td>
                     <td>{{ curso.nombre }}</td>
                     <td>{{ curso.createAt | date:'dd/MM/yyyy' }}</td>
+                    <td>
+                        <button type="button" [routerLink]="['/cursos', 'form', curso.id]"
+                            class="btn btn-sm btn-warning">
+                            Editar
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" (click)="eliminar(curso)" class="btn btn-sm btn-danger">Eliminar</button>
+                    </td>
                 </tr>
             </tbody>
         </table>
