Añadiendo el formulario y validación

--- a/src/app/components/alumnos/form/form.component.html
+++ b/src/app/components/alumnos/form/form.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header d-flex justify-content-between">
         <h3>{{ titulo }}</h3>
-        <button type="button" class="btn btn-warning" [routerLink]="['/alumnos']">Volver</button>
+        <button type="button" class="btn btn-warning" [routerLink]="[redirect]">Volver</button>
     </div>
     <div class="card-body">
         <form [formGroup]="miFormulario" autocomplete="off">
