--- a/src/app/components/examenes/examen-form/examen-form.component.html
+++ b/src/app/components/examenes/examen-form/examen-form.component.html
@@ -15,7 +15,8 @@
             </div>
             <div class="mb-3">
                 <label for="asignaturaPadre">Asignatura Principal</label>
-                <select id="asignaturaPadre" formControlName="asignaturaPadre" class="form-select">
+                <select id="asignaturaPadre" formControlName="asignaturaPadre" [compareWith]="compararAsignatura"
+                    class="form-select">
                     <option disabled selected [ngValue]="null">--Seleccionar--</option>
                     <option *ngFor="let asignatura of asignaturasPadre" [ngValue]="asignatura">
                         {{ asignatura.nombre }}
@@ -27,7 +28,8 @@
             </div>
             <div class="mb-3">
                 <label for="asignaturaHija">Sub Asignatura</label>
-                <select id="asignaturaHija" formControlName="asignaturaHija" class="form-select">
+                <select id="asignaturaHija" formControlName="asignaturaHija" [compareWith]="compararAsignatura"
+                    class="form-select">
                     <option disabled selected [value]="null">--Seleccionar--</option>
                     <option *ngFor="let asignatura of asignaturasHija" [ngValue]="asignatura">
                         {{ asignatura.nombre }}
