Añadiendo algunas mejoras en asignaturas

--- a/src/app/components/examenes/list/examenes.component.html
+++ b/src/app/components/examenes/list/examenes.component.html
@@ -10,6 +10,7 @@
                 <tr>
                     <th>Id</th>
                     <th>Nombre</th>
+                    <th>Asignaturas</th>
                     <th>Creado en</th>
                     <th>Editar</th>
                     <th>Eliminar</th>
@@ -19,6 +20,7 @@
                 <tr *ngFor="let examen of lista">
                     <td>{{ examen.id }}</td>
                     <td>{{ examen.nombre }}</td>
+                    <td>{{ examen.asignaturaPadre?.nombre }} -> {{ examen.asignaturaHija?.nombre }}</td>
                     <td>{{ examen.createAt | date:'dd/MM/yyyy' }}</td>
                     <td>
                         <button type="button" [routerLink]="['/examenes', 'form', examen.id]"
