Creando componente asignar alumnos y configuraciones

--- a/src/app/components/cursos/list/cursos.component.html
+++ b/src/app/components/cursos/list/cursos.component.html
@@ -10,6 +10,7 @@
                 <tr>
                     <th>Id</th>
                     <th>Nombre</th>
+                    <th>Alumnos</th>
                     <th>Creado en</th>
                     <th>Editar</th>
                     <th>Eliminar</th>
@@ -19,6 +20,12 @@
                 <tr *ngFor="let curso of lista">
                     <td>{{ curso.id }}</td>
                     <td>{{ curso.nombre }}</td>
+                    <td>
+                        <button type="button" [routerLink]="['/cursos', 'asignar-alumnos', curso.id]"
+                            class="btn btn-sm btn-info">
+                            Asignar ({{ curso.alumnos.length }})
+                        </button>
+                    </td>
                     <td>{{ curso.createAt | date:'dd/MM/yyyy' }}</td>
                     <td>
                         <button type="button" [routerLink]="['/cursos', 'form', curso.id]"
