--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -1,3 +1,6 @@
+<mat-form-field class="mx-3">
+    <input type="text" matInput placeholder="Buscar alumnos..." (keyup)="filtrar($event)">
+</mat-form-field>
 <table mat-table [dataSource]="alumnosAsignar">
     <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
