--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -2,6 +2,19 @@
     <input type="text" matInput placeholder="Buscar alumnos..." (keyup)="filtrar($event)">
 </mat-form-field>
 <table mat-table [dataSource]="alumnosAsignar">
+    <ng-container matColumnDef="seleccion">
+        <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? seleccionarDesSeleccionarTodos() : null"
+                [checked]="seleccion.hasValue() && estanTodosSeleccionados()"
+                [indeterminate]="seleccion.hasValue() && !estanTodosSeleccionados()"></mat-checkbox>
+            Todos
+        </th>
+        <td mat-cell *matCellDef="let alumno">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? seleccion.toggle(alumno) : null"
+                [checked]="seleccion.isSelected(alumno)"></mat-checkbox>
+        </td>
+    </ng-container>
+
     <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let alumno"> {{alumno.nombre}} </td>
