--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -26,5 +26,5 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
-    <tr mat-row *matRowDef="let row; columns: mostrarColumnas;"></tr>
+    <tr mat-row *matRowDef="let row; columns: mostrarColumnas;" (click)="seleccion.toggle(row)"></tr>
 </table>
