--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -1,31 +1,40 @@
-<mat-form-field class="mx-3">
-    <input type="text" matInput placeholder="Buscar alumnos..." (keyup)="filtrar($event)">
-</mat-form-field>
-<table mat-table [dataSource]="alumnosAsignar">
-    <ng-container matColumnDef="seleccion">
-        <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? seleccionarDesSeleccionarTodos() : null"
-                [checked]="seleccion.hasValue() && estanTodosSeleccionados()"
-                [indeterminate]="seleccion.hasValue() && !estanTodosSeleccionados()"></mat-checkbox>
-            Todos
-        </th>
-        <td mat-cell *matCellDef="let alumno">
-            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? seleccion.toggle(alumno) : null"
-                [checked]="seleccion.isSelected(alumno)"></mat-checkbox>
-        </td>
-    </ng-container>
+<mat-card>
+    <mat-card-header *ngIf="curso">
+        <mat-card-title>Alumnos del curso {{ curso.nombre }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-form-field class="mx-3">
+            <input type="text" matInput placeholder="Buscar alumnos..." (keyup)="filtrar($event)">
+        </mat-form-field>
+        <table mat-table [dataSource]="alumnosAsignar">
+            <ng-container matColumnDef="seleccion">
+                <th mat-header-cell *matHeaderCellDef>
+                    <mat-checkbox (change)="$event ? seleccionarDesSeleccionarTodos() : null"
+                        [checked]="seleccion.hasValue() && estanTodosSeleccionados()"
+                        [indeterminate]="seleccion.hasValue() && !estanTodosSeleccionados()"></mat-checkbox>
+                    Todos
+                </th>
+                <td mat-cell *matCellDef="let alumno">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? seleccion.toggle(alumno) : null"
+                        [checked]="seleccion.isSelected(alumno)"></mat-checkbox>
+                </td>
+            </ng-container>
 
-    <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let alumno"> {{alumno.nombre}} </td>
-    </ng-container>
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let alumno"> {{alumno.nombre}} </td>
+            </ng-container>
 
-    <ng-container matColumnDef="apellido">
-        <th mat-header-cell *matHeaderCellDef>Apellido</th>
-        <td mat-cell *matCellDef="let alumno"> {{alumno.apellido}} </td>
-    </ng-container>
+            <ng-container matColumnDef="apellido">
+                <th mat-header-cell *matHeaderCellDef>Apellido</th>
+                <td mat-cell *matCellDef="let alumno"> {{alumno.apellido}} </td>
+            </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
-    <tr mat-row *matRowDef="let row; columns: mostrarColumnas;" (click)="seleccion.toggle(row)"></tr>
-</table>
-<button mat-button mat-raised-button class="m-4" [disabled]="!seleccion.hasValue()" (click)="asignar()">Asignar</button>
+            <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
+            <tr mat-row *matRowDef="let row; columns: mostrarColumnas;" (click)="seleccion.toggle(row)"></tr>
+        </table>
+        <button type="button" color="primary" mat-button mat-raised-button class="m-4"
+            [disabled]="!seleccion.hasValue()" (click)="asignar()">Asignar</button>
+
+    </mat-card-content>
+</mat-card>
