--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -3,12 +3,12 @@
         <mat-card-title>Alumnos del curso {{ curso.nombre }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <mat-tab-group dynamicHeight>
+        <mat-tab-group dynamicHeight [(selectedIndex)]="tabIndex">
             <mat-tab label="Asignar alumnos">
                 <mat-form-field class="mx-3">
                     <input type="text" matInput placeholder="Buscar alumnos..." (keyup)="filtrar($event)">
                 </mat-form-field>
-                <table mat-table [dataSource]="alumnosAsignar">
+                <table mat-table [dataSource]="alumnosAsignar" class="mat-elevation-z8 my-3">
                     <ng-container matColumnDef="seleccion">
                         <th mat-header-cell *matHeaderCellDef>
                             <mat-checkbox (change)="$event ? seleccionarDesSeleccionarTodos() : null"
@@ -40,7 +40,7 @@
                     [disabled]="!seleccion.hasValue()" (click)="asignar()">Asignar</button>
             </mat-tab>
             <mat-tab label="Alumnos asignados">
-                <table mat-table [dataSource]="alumnos">
+                <table mat-table [dataSource]="alumnos" class="mat-elevation-z8 my-3">
                     <ng-container matColumnDef="id">
                         <th mat-header-cell *matHeaderCellDef>Id</th>
                         <td mat-cell *matCellDef="let alumno"> {{alumno.id}} </td>
