--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -61,6 +61,13 @@
                         <td mat-cell *matCellDef="let alumno"> {{alumno.email}} </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="eliminar">
+                        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+                        <td mat-cell *matCellDef="let alumno">
+                            <button type="button" mat-mini-fab color="warn" (click)="eliminarAlumno(alumno)">X</button>
+                        </td>
+                    </ng-container>
+
                     <tr mat-header-row *matHeaderRowDef="mostrarTodasColumnas"></tr>
                     <tr mat-row *matRowDef="let row; columns: mostrarTodasColumnas;"></tr>
                 </table>
