--- a/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
+++ b/src/app/components/cursos/asignar-alumnos/asignar-alumnos.component.html
@@ -40,7 +40,7 @@
                     [disabled]="!seleccion.hasValue()" (click)="asignar()">Asignar</button>
             </mat-tab>
             <mat-tab label="Alumnos asignados">
-                <table mat-table [dataSource]="alumnos" class="mat-elevation-z8 my-3">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 my-3">
                     <ng-container matColumnDef="id">
                         <th mat-header-cell *matHeaderCellDef>Id</th>
                         <td mat-cell *matCellDef="let alumno"> {{alumno.id}} </td>
@@ -71,6 +71,9 @@
                     <tr mat-header-row *matHeaderRowDef="mostrarTodasColumnas"></tr>
                     <tr mat-row *matRowDef="let row; columns: mostrarTodasColumnas;"></tr>
                 </table>
+                <mat-paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons
+                    class="d-flex justify-content-start">
+                </mat-paginator>
             </mat-tab>
         </mat-tab-group>
     </mat-card-content>
