--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -1,7 +1,8 @@
 <mat-form-field class="w-100">
     <input type="text" matInput [formControl]="autocompleteControl" [matAutocomplete]="autocomplete"
         placeholder="Añadir examen">
-    <mat-autocomplete #autocomplete="matAutocomplete" [displayWith]="mostrarNombre">
+    <mat-autocomplete #autocomplete="matAutocomplete" [displayWith]="mostrarNombre"
+        (optionSelected)="seleccionarExamen($event)">
         <mat-option *ngFor="let examen of examenesFiltrados;" [value]="examen">
             {{ examen.nombre }}
         </mat-option>
