--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -8,3 +8,24 @@
         </mat-option>
     </mat-autocomplete>
 </mat-form-field>
+<mat-card class="w-100">
+    <mat-card-header *ngIf="curso">
+        <mat-card-title>Exámenes del curso {{ curso.nombre }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <table mat-table [dataSource]="examenesAsignar" class="mat-elevation-z8 my-3 w-100">
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="asignatura">
+                <th mat-header-cell *matHeaderCellDef>Asignatura</th>
+                <td mat-cell *matCellDef="let examen"> {{examen.asignaturaHija.nombre}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
+            <tr mat-row *matRowDef="let row; columns: mostrarColumnas;"></tr>
+        </table>
+    </mat-card-content>
+</mat-card>
