--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -24,6 +24,13 @@
                 <td mat-cell *matCellDef="let examen"> {{examen.asignaturaHija.nombre}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="eliminar">
+                <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+                <td mat-cell *matCellDef="let examen">
+                    <button type="button" mat-mini-fab color="warn" (click)="eliminarDelAsignar(examen)">X</button>
+                </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
             <tr mat-row *matRowDef="let row; columns: mostrarColumnas;"></tr>
         </table>
