--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -34,5 +34,9 @@
             <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
             <tr mat-row *matRowDef="let row; columns: mostrarColumnas;"></tr>
         </table>
+        <button type="button" [disabled]="examenesAsignar.length === 0" (click)="asignar()" mat-raised-button
+            color="primary" class="m-4">
+            Asignar
+        </button>
     </mat-card-content>
 </mat-card>
