--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -61,6 +61,14 @@
                         </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="eliminar">
+                        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+                        <td mat-cell *matCellDef="let examen">
+                            <button type="button" mat-mini-fab color="warn"
+                                (click)="eliminarExamenDelCurso(examen)">X</button>
+                        </td>
+                    </ng-container>
+
                     <tr mat-header-row *matHeaderRowDef="mostrarTodasColumnasExamenes"></tr>
                     <tr mat-row *matRowDef="let row; columns: mostrarTodasColumnasExamenes;"></tr>
                 </table>
