--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -43,7 +43,7 @@
                 </button>
             </mat-tab>
             <mat-tab label="Exámenes del curso">
-                <table mat-table [dataSource]="examenes" class="mat-elevation-z8 my-3 w-100">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 my-3 w-100">
                     <ng-container matColumnDef="id">
                         <th mat-header-cell *matHeaderCellDef>Id</th>
                         <td mat-cell *matCellDef="let examen"> {{examen.id}} </td>
@@ -72,6 +72,9 @@
                     <tr mat-header-row *matHeaderRowDef="mostrarTodasColumnasExamenes"></tr>
                     <tr mat-row *matRowDef="let row; columns: mostrarTodasColumnasExamenes;"></tr>
                 </table>
+                <mat-paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons
+                    class="d-flex justify-content-start">
+                </mat-paginator>
             </mat-tab>
         </mat-tab-group>
     </mat-card-content>
