Abriendo ventana modal para responder examen

--- a/src/app/components/alumnos/responder-examen/responder-examen.component.html
+++ b/src/app/components/alumnos/responder-examen/responder-examen.component.html
@@ -29,7 +29,8 @@
             <ng-container matColumnDef="responder">
                 <th mat-header-cell *matHeaderCellDef>Responder</th>
                 <td mat-cell *matCellDef="let examen">
-                    <button type="button" mat-stroked-button color="warn" [disabled]="examen.respondido">
+                    <button type="button" mat-stroked-button color="warn" [disabled]="examen.respondido"
+                        (click)="responderExamen(examen)">
                         {{ examen.respondido ? 'Respondido': 'Responder' }}
                     </button>
                 </td>
