--- a/src/app/components/alumnos/responder-examen-modal/responder-examen-modal.component.html
+++ b/src/app/components/alumnos/responder-examen-modal/responder-examen-modal.component.html
@@ -1,1 +1,8 @@
-<p>responder-examen-modal works!</p>
+<h1 mat-dialog-title>Curso {{ curso.nombre }}</h1>
+<div mat-dialog-content>
+    <p>Examen {{ examen.nombre }}</p>
+</div>
+<div mat-dialog-actions>
+    <button type="button" mat-button (click)="cancelar()">Cancelar</button>
+    <button type="button" mat-button [mat-dialog-close]="respuestas">Enviar</button>
+</div>
